Bug 493370 - [Regression] Spectacle doesn't follows format name while saving file through 'Save As'
Summary: [Regression] Spectacle doesn't follows format name while saving file through ...
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: 24.08.1
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Noah Davis
URL:
Keywords:
: 492240 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-09-19 16:36 UTC by reports_go_brrr
Modified: 2024-09-26 18:43 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.08.2
Sentry Crash Report:


Attachments
Showcase (1.24 MB, video/mp4)
2024-09-19 16:36 UTC, reports_go_brrr
Details

Note You need to log in before you can comment on or make changes to this bug.
Description reports_go_brrr 2024-09-19 16:36:34 UTC
Created attachment 173888 [details]
Showcase

SUMMARY
Spectacle doesn't follows filename format I setted up in "Image Saving" "Filename:" field.
File formatiing specified in "Video Saving" to own works correctly.
I suspect Plasma 6.1.5 update as a culprit here, because before that it worked correctly.
Works under X11 and Wayland.

STEPS TO REPRODUCE
1. Open Spectacle
2. Go to Settings
3. Go to "Image Saving" tab
4. Change "Filename:" to any different
5. Save and close the program
6. Press Meta+Shift+PrintScreen
7. Press Ctrl+Shift+S

OBSERVED RESULT
Spectacle doesn't follows filename format you've setted up in Step 4.

EXPECTED RESULT
Make it to follow formatting again.

SOFTWARE/OS VERSIONS
Operating System: EndeavourOS
KDE Plasma Version: 6.1.5
KDE Frameworks Version: 6.6.0
Qt Version: 6.7.2
Kernel Version: 6.10.10-arch1-1 (64-bit)
Graphics Platform: Wayland

ADDITIONAL INFORMATION
Vanilla KDE Plasma, vanilla EndeavourOS.
Keys capturing in the video done by ShowMeTheKey.
© Art by axo1otl - "Scarlet Tree"
Comment 1 Justin Zobel 2024-09-20 04:37:18 UTC
Confirmed on spectacle from git master.
Comment 2 Bug Janitor Service 2024-09-20 05:57:57 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/spectacle/-/merge_requests/405
Comment 3 Noah Davis 2024-09-25 15:08:42 UTC
*** Bug 492240 has been marked as a duplicate of this bug. ***
Comment 4 Noah Davis 2024-09-25 15:10:34 UTC
Git commit 5c227fd28d7f488baf9e77415d40d07704b3c8b6 by Noah Davis.
Committed on 25/09/2024 at 15:10.
Pushed by ndavis into branch 'master'.

ExportManager: Fix Save As using default filename template and wrong folder for filename formatting

M  +1    -1    src/ExportManager.cpp

https://invent.kde.org/graphics/spectacle/-/commit/5c227fd28d7f488baf9e77415d40d07704b3c8b6
Comment 5 Noah Davis 2024-09-25 15:10:51 UTC
Git commit e32d02b06addc80dece04086c277fd815d1f952c by Noah Davis.
Committed on 25/09/2024 at 15:10.
Pushed by ndavis into branch 'release/24.08'.

ExportManager: Fix Save As using default filename template and wrong folder for filename formatting

(cherry picked from commit 5c227fd28d7f488baf9e77415d40d07704b3c8b6)

Co-authored-by: Noah Davis <noahadvs@gmail.com>

M  +1    -1    src/ExportManager.cpp

https://invent.kde.org/graphics/spectacle/-/commit/e32d02b06addc80dece04086c277fd815d1f952c