ExportManager: Fix Save As using default filename template and wrong folder for filename formatting

BUG: 493370

(cherry picked from commit 5c227fd28d7f488baf9e77415d40d07704b3c8b6)

Co-authored-by: Noah Davis <noahadvs@gmail.com>